Fix bug with wrong colors for paragraph under images

--- a/style.css
+++ b/style.css
@@ -23,7 +23,13 @@ body {
     width: 100%;
 }
 
-/* Header CSS rules */
+/* Header and nav CSS rules */
+
+.navBg {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
 
 header {
     display: flex;
@@ -35,10 +41,11 @@ header {
 
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     gap: 15px;
-    height: 50px;
+    height: 60px;
+    width: 70%;
 }
 
 h1 {
@@ -47,9 +54,9 @@ h1 {
     font-size: 24px;
 }
 
-h1,
+.imgWrapper,
 ul {
-    width: 35%;
+    width: 50%;
 }
 
 .header-menu {
@@ -281,6 +288,9 @@ footer p:first-of-type {
 /* Primary font colours */
 
 h2,
+h1,
+.header-menu>li>a,
+h3,
 .header-left>p,
 .header-button,
 .header-right>p,
@@ -293,11 +303,8 @@ footer a,
 }
 
 /* Secondary font colours */
-h1,
-.header-menu>li>a,
-h3,
 .info p {
-    color: #ffffff;
+    color: #212121;
 }
 
 /* Background color #1 */
@@ -325,7 +332,7 @@ footer {
 
 /* Background color #4 */
 
-nav {
+.navBg {
     background-color: #3F51B5;
 }
 
